<resources>
    <string name="app_name">Pokedex</string>
    <string name="pokedex">Pokédex</string>
    <string name="user">Usuário</string>
    <string name="login">Login</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de quilômetro</string>
    <string name="price">Preço</string>
    <string name="price_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_liter">KMs por Litro</string>
    <string name="total_spent">Seu gasto total será de:</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">Calcular</string>

    <string name="validation_fill_all_fields">Preencha todos os campos.</string>
</resources>