<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/distance"
        android:inputType="number"/>

    <TextView
        android:id="@+id/text_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_distance"
        android:layout_centerHorizontal="true"
        android:text="@string/total_km"/>

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_distance"
        android:layout_marginTop="32dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_price"
        android:layout_centerHorizontal="true"
        android:text="@string/price_liter"/>

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_price"
        android:layout_marginTop="32dp"
        android:hint="@string/autonomy"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/text_autonomy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_autonomy"
        android:layout_centerHorizontal="true"
        android:text="@string/km_liter"/>

    <TextView
        android:id="@+id/text_fixed_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_autonomy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/total_spent"/>

    <TextView
        android:id="@+id/text_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_fixed_total_price"
        android:layout_centerHorizontal="true"
        android:text="@string/total_value"
        android:layout_marginTop="16dp"
        android:textColor="@color/blueprice"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_total"
        android:backgroundTint="@color/bluebuttom"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:text="@string/calculate"/>
</RelativeLayout>